# PuffinEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  Puffin-Debug.cap  Puffin-Release.cap  PuffinEngine.cmake  PuffinEngine.sln  PuffinRenderDoc.cap  README.md  VulkanTutorial.sln
VulkanTutorial/: BaseComponent.h  BulletPhysicsComponent.h  BulletPhysicsSystem.cpp  BulletPhysicsSystem.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraComponent.h  ComponentManager.cpp  ComponentManager.h  DebugDraw.cpp  ECS.cpp  ECS.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntitySystem.cpp  EntitySystem.h  EntityTransform.h  FrameBufferAttachment.h  InputManager.cpp  InputManager.h  JobManager.cpp  Light.cpp  Light.h  LightComponent.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  ModelLoader.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsSystem.cpp  PhysicsSystem.h  ProceduralMeshGenerator.h  ProjectSettings.h  (+65 more)
VulkanTutorial/AS_DEBUG/: __CExample_CExample.txt  __CExample_OnSpacebarPressed.txt  __CExample_OnSpacebarReleased.txt  __CExample_Start.txt  __CExample_Stop.txt  __CExample_Update.txt  __Game_Game.txt  __Game_Update.txt  stats.txt
VulkanTutorial/Debug/: vc142.idb
VulkanTutorial/Debug/VulkanTutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanTutorial.lastbuildstate
VulkanTutorial/assets/models/: space_engineer.asset_m
VulkanTutorial/assets/scenes/: default.scn  test.scn
VulkanTutorial/content/models/: Sphere.psm  cube.psm  space_engineer.psm
VulkanTutorial/content/scenes/: default.pscn  physics.pscn
VulkanTutorial/content/scripts/: test_script.jnx
VulkanTutorial/content/shaders/: compile.bat  debug.vert  debug_frag.spv  debug_vert.spv  default_lighting.frag  default_lighting.vert  default_lighting_frag.spv  default_lighting_vert.spv  deferred_geometry.frag  deferred_geometry.vert  deferred_geometry_frag.spv  deferred_geometry_vert.spv  deferred_shading.frag  deferred_shading.vert  deferred_shading_frag.spv  deferred_shading_vert.spv  shadowmap.vert  shadowmap_vert.spv
VulkanTutorial/imgui/: imgui_demo.cpp
VulkanTutorial/include/Assets/: Asset.h  SoundAsset.h
VulkanTutorial/include/Components/: AngelScriptComponent.h  TransformComponent.h
VulkanTutorial/include/Components/Physics/: ShapeComponents2D.h  VelocityComponent.hpp
VulkanTutorial/include/Components/Procedural/: ProceduralComponent.hpp  ProceduralMeshComponent.hpp
VulkanTutorial/include/Components/Rendering/: LightComponent.h
VulkanTutorial/include/ECS/: ComponentType.h  ECS.h  System.hpp
VulkanTutorial/include/Engine/: Engine.hpp  EventSubsystem.hpp  Subsystem.hpp
VulkanTutorial/include/Physics/Box2D/: Box2DContactListener.h
VulkanTutorial/include/Physics/PuffinPhysics2D/: PhysicsHelpers2D.h
VulkanTutorial/include/Procedural/: ProceduralMeshGenSystem.hpp
VulkanTutorial/include/Scripting/: AngelScriptSystem.h  RegisterTypeHelpers.h
VulkanTutorial/include/Types/: Quat.h  Vertex.hpp
VulkanTutorial/include/UI/Editor/: UIManager.h
VulkanTutorial/include/Window/: WindowSubsystem.hpp
VulkanTutorial/include/imguizmo/: ImGuizmo.cpp
VulkanTutorial/models_backup/: Sphere.dae
VulkanTutorial/shaders/: compile.bat  debug.frag  debug.vert  debug_frag.spv  debug_vert.spv  default_lighting.frag  default_lighting.vert  default_lighting_frag.spv  frag.spv  shader.frag  shader.vert  shadowmap.frag  shadowmap.spv  shadowmap.vert  shadowmap_frag.spv  shadowmap_vert.spv  vert.spv
VulkanTutorial/src/: AssetRegistry.cpp  AssetRegistry.h  Engine.cpp  Engine.h  JobManager.cpp  JobManager.h  ManipulationGizmo.h  MathHelpers.h  ProjectSettings.h  SerializeScene.h  main.cpp
VulkanTutorial/src/Assets/: Asset.cpp  Asset.h  AssetRegistry.cpp  AssetRegistry.h  MeshAsset.cpp  MeshAsset.h  TextureAsset.cpp  TextureAsset.h
VulkanTutorial/src/Assets/Importers/: ModelImporter.h  TextureImporter.h
VulkanTutorial/src/Audio/: AudioManager.cpp  AudioManager.h  AudioSubsystem.cpp  AudioSubsystem.h  AudioSystem.cpp  AudioSystem.h
VulkanTutorial/src/Components/: AngelScriptComponent.h  BaseComponent.h  JinxScriptComponent.h  TransformComponent.h
VulkanTutorial/src/ECS/: ECS.h  Entity.h  EntityID.h  EntityView.cpp  EntityView.h  Event.h  EventManager.h  System.h  System.hpp
VulkanTutorial/src/Engine/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  EventSubsystem.h  Subsystem.hpp
VulkanTutorial/src/Input/: InputEvent.h  InputManager.cpp  InputManager.h  InputSubsystem.cpp  InputSubsystem.h
VulkanTutorial/src/Physics/: BulletPhysicsSystem.cpp  BulletPhysicsSystem.h  PhysicsHelpers2D.h  PhysicsSystem2D.cpp  PhysicsSystem2D.h  PhysicsTypes2D.h
VulkanTutorial/src/Procedural/: ProceduralMeshGenSystem.cpp
VulkanTutorial/src/Rendering/: DebugDraw.h  ModelLoader.h  VKDebug.h  VKDeferredRender.cpp  VKDeferredRender.h  VKDescriptors.cpp  VKDescriptors.h  VKHelper.cpp  VKInitializers.h  VKPipeline.h  VKTexture.h  VKTypes.h  VulkanEngine.cpp  VulkanEngine.h
VulkanTutorial/src/Scripting/: AngelScriptSystem.cpp  AngelScriptSystem.h  JinxScriptingSystem.cpp  JinxScriptingSystem.h  RegisterTypeHelpers.h  puffin-core.jnx
VulkanTutorial/src/Types/: ComponentFlags.h  Matrix.h  PackedArray.h  PhysicsTypes2D.h  Quat.h  RingBuffer.h  Simplex.h  UUID.h  Vector.h  VectorConversion.h  Vertex.hpp
VulkanTutorial/src/UI/: UIManager.cpp  UIManager.h  UIWindow.cpp  UIWindow.h  UIWindowEntityProperties.cpp  UIWindowEntityProperties.h  UIWindowPerformance.cpp  UIWindowPerformance.h  UIWindowSceneHierarchy.cpp  UIWindowSceneHierarchy.h  UIWindowSettings.cpp  UIWindowSettings.h  UIWindowViewport.cpp  UIWindowViewport.h
VulkanTutorial/src/UI/Editor/: UIManager.cpp
VulkanTutorial/src/Window/: WindowSubsystem.cpp
VulkanTutorial/x64/Debug/: vc142.idb
shaders/vulkan/: CMakeLists.txt
shaders/vulkan/forward_shading/: forward_shading.frag  forward_shading.vert
shaders/vulkan/hellotriangle/: hello_triangle.vert
shaders/vulkan/shadowmaps/: shadowmap.vert
shaders/vulkan/triangle/: triangle.frag  triangle.vert
(+1116 files in other folders)
